--- a/index.html
+++ b/index.html
@@ -2,9 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Business website</title>
+    <link rel="stylesheet" type="text/css" href="index.css"></link>
 </head>
 <body>
-$END$
+<header>
+    <div class="row">
+        <div class="logo">
+            <img src="bird.gif">
+        </div>
+    <ul class="main-nav">
+        <li class="active"><a href="">HOME</a></li>
+        <li><a href="">SERVICES</a></li>
+        <li><a href="">ABOUT</a></li>
+        <li><a href="">CONTACT</a></li>
+        <li><a href="">NEWS</a></li>
+        <li><a href="">FAQ</a></li>
+     </ul>
+    </div>
+    <div class="hero">
+        <h1>Are you Ready?</h1>
+          <div class="button">
+              <a href="" class="btn btn-one">Watch Video</a>
+              <a href="" class="btn btn-two">Explore More</a>
+          </div>
+    </div>
+</header>
 </body>
 </html>
